force-app/main/default/objects/Stock__c/Stock__c.object-meta.xml
<CustomObject>
    <label>股票</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>