force-app/main/default/objects/Stock__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>缩写</label>
    <length>50</length>
    <type>Text</type>
</CustomField>