force-app/main/default/objects/Stock__c/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <externalId>true</externalId>
    <label>ABC</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>