force-app/main/default/objects/Stock__c/fields/Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Asset_Value__c</fullName>
    <label>每股净资产</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>