force-app/main/default/objects/Stock__c/fields/Business_Income__c.field-meta.xml
<CustomField>
    <fullName>Business_Income__c</fullName>
    <label>营业收入</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>