force-app/main/default/objects/Stock__c/fields/Debt_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Debt_Ratio__c</fullName>
    <label>负债率</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>