force-app/main/default/objects/Stock__c/fields/Earnings__c.field-meta.xml
<CustomField>
    <fullName>Earnings__c</fullName>
    <label>每股收益</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>