force-app/main/default/objects/Stock__c/fields/Market_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Market_Ratio__c</fullName>
    <label>市净率</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>