force-app/main/default/objects/Stock__c/fields/Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit__c</fullName>
    <label>净利润</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>