force-app/main/default/objects/Stock__c/fields/Profit_Unit__c.field-meta.xml
<CustomField>
    <fullName>Profit_Unit__c</fullName>
    <label>净利润单位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>亿</fullName>
            </value>
            <value>
                <fullName>万</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>