force-app/main/default/objects/Stock__c/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <label>买入价格</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>