force-app/main/default/objects/Stock__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>营收同比</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>