force-app/main/default/objects/Stock__c/fields/Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>Stock_Number__c</fullName>
    <label>持有股数</label>
    <summarizedField>Buy_Sell__c.Number__c</summarizedField>
    <summaryFilterItems>
        <field>Buy_Sell__c.Actions__c</field>
        <operation>equals</operation>
        <value>买入</value>
    </summaryFilterItems>
    <summaryForeignKey>Buy_Sell__c.Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>