force-app/main/default/objects/Stock__c/fields/Testtotal__c.field-meta.xml
<CustomField>
    <fullName>Testtotal__c</fullName>
    <label>Testtotal</label>
    <summarizedField>K_Line__c.Closing__c</summarizedField>
    <summaryFilterItems>
        <field>K_Line__c.Closing__c</field>
        <operation>notEqual</operation>
        <value>-10</value>
    </summaryFilterItems>
    <summaryForeignKey>K_Line__c.Stock_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>