force-app/main/default/objects/Stock__c/fields/Total_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital__c</fullName>
    <label>总股本</label>
    <length>100</length>
    <type>Text</type>
</CustomField>