force-app/main/default/objects/Stock__c/fields/Totalmv__c.field-meta.xml
<CustomField>
    <fullName>Totalmv__c</fullName>
    <label>总市值</label>
    <length>100</length>
    <type>Text</type>
</CustomField>