force-app/main/default/objects/Stock__c/fields/TTM__c.field-meta.xml
<CustomField>
    <fullName>TTM__c</fullName>
    <label>市盈率(TTM)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>